--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
       
       <head>
             <title> G-dayyyyyy</title>      
-                 <link rel="stylesheet" href="css.css/mystyle.css">
+                 <link rel="stylesheet" href="mystyle.css">
   
      </head>
       <body>
