--- a/somthing.html
+++ b/somthing.html
@@ -17,7 +17,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
                 
            <title> oof </title>
-      <link rel="stylesheet" href="css.css/mystyle.css">
+      <link rel="stylesheet" href="mystyle.css">
       <link rel="stylesheet" href="https://tinyurl.com/bootstrap-icons">ad>
       
 </head>
