--- a/GOD.html
+++ b/GOD.html
@@ -22,7 +22,7 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" href="https://tinyurl.com/bootstrap-icons">
 		<link rel="stylesheet" href="timelineeeee.css">
-		<link rel="stylesheet" href="css.css/mystyle.css">
+		<link rel="stylesheet" href="mystyle.css">
 	</head>
 
 
