--- a/html2.html
+++ b/html2.html
@@ -3,7 +3,7 @@
  <title> oof </title>
 
 
- <link rel="stylesheet" href="css.css/mystyle.css">
+ <link rel="stylesheet" href="mystyle.css">
  <link rel="stylesheet" href="https://tinyurl.com/fontawesome-icons">
  <link rel="stylesheet" href="https://tinyurl.com/bootstrap-icons">
 
