--- a/EDD.html
+++ b/EDD.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title> sichskcbiqasgckaicha </title>
-	<link rel="stylesheet" href="css.css/mystyle.css">
+	<link rel="stylesheet" href="mystyle.css">
 	<link rel="stylesheet" href="div.css">
 	<script src="crapitos.js"></script>
 </head>
@@ -11,7 +11,7 @@
       <ul>
         <li> <a href="html2.html">A clickable thing.. </a> </li>
      	<li> <a href="somthing.html">Click here for gift card.</a> </li>
-      <li> <a href="html.html" > Click here for something random. </a> </li>
+      <li> <a href="index.html" > Click here for something random. </a> </li>
      <li><a href="GOD.html">ssssssssss</a></li>
      <li><a href="EDD.html" class="active"> imma bit drunk </a></li>
      <li><a href="eio.html"> lazytoputspaces </a></li>
