--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <ul>
         <li> <a href="html2.html">A clickable thing.. </a> </li>
      	<li> <a href="somthing.html">Click here for gift card.</a> </li>
-      <li> <a href="html.html" class="active"> Click here for something random. </a> </li>
+      <li> <a href="index.html" class="active"> Click here for something random. </a> </li>
      <li><a href="GOD.html">ssssssssss</a></li>
      <li><a href="EDD.html"> imma bit drunk </a></li>     
       <li><a href="eio.html"> lazytoputspaces </a></li>
