--- a/GOD.html
+++ b/GOD.html
@@ -30,7 +30,7 @@
 		<ul>
 			<li> <a href="html2.html" >A clickable thing.. </a> </li>
 			<li> <a href="somthing.html">Click here for gift card.</a> </li>
-			<li> <a href="html.html"> Click here for something random. </a> </li>
+			<li> <a href="index.html"> Click here for something random. </a> </li>
 			<li><a href="GOD.html"class="active">ssssssssss</a></li>
 			<li><a href="EDD.html"> imma bit drunk </a></li>
 			<li><a href="eio.html"> lazytoputspaces </a></li>
