--- a/eio.html
+++ b/eio.html
@@ -2,7 +2,7 @@
       
       <head>
             <title>funfunfunfunfunfunfunfunfunfunfun</title>      
-                 <link rel="stylesheet" href="css.css/mystyle.css">
+                 <link rel="stylesheet" href="mystyle.css">
   
      </head>
       <body>
@@ -13,7 +13,7 @@
       <ul>
         <li> <a href="html2.html">A clickable thing.. </a> </li>
      	<li> <a href="somthing.html">Click here for gift card.</a> </li>
-      <li> <a href="html.html"> Click here for something random. </a> </li>
+      <li> <a href="index.html"> Click here for something random. </a> </li>
      <li><a href="GOD.html">ssssssssss</a></li>
      <li><a href="EDD.html"> imma bit drunk </a></li>
      <li><a href="eio.html" class="active"> lazytoputspaces </a></li>
