--- a/html2.html
+++ b/html2.html
@@ -106,7 +106,7 @@
       <div class="card-body">
 
         <h4 class="card-title"> pLeAsE sTaNd bY </h4>
-       <p class="card-text">LOLOLOLOLOLOLOLOL </p>
+       <p class="card-text">this is sparta </p>
   </div>
   </div>
   </div>
@@ -118,7 +118,7 @@
     <div class="card-body">
 
   <h4 class="card-title"> pLeAsE sTaNd bY </h4>
-  <p class="card-text">LOLOLOLOLOLOLOLOL </p>
+  <p class="card-text"> ejeeeeeeeeeeee</p>
 
 
 </div>
